<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Events 254</string>
  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
  <string name="checkin">Checkin</string>
  <string name="menu_settings">Settings</string>

  <string name="action_settings">Settings</string>
  <string name="title_activity_details">Details</string>
  <string name="action_share">Share</string>
  <string name="action_search">Search</string>

  <string name="button_more_details">More Details</string>
  <string name="action_refresh">Refresh</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_main">Events</string>

  <string name="title_activity_image_view">ImageViewActivity</string>

  <string name="title_activity_more">More</string>
  <string name="pref_user">pref_user</string>
  <string name="title_username">Username</string>
  <string name="default_user">Anonymous</string>
  <string name="title_account">Account</string>
  <string name="title_notification">Notifications</string>
  <string name="title_reminder_settings">Reminder Settings</string>
  <string name="pref_notifications">pref_notifications</string>
  <string name="pref_going_notifications">pref_going_notifications</string>
  <string name="pref_following_notifications">pref_following_notifications</string>
  <string name="title_about">About</string>
  <string name="title_app_version">App Version</string>
  <string name="app_version">1.0.0, Build 100</string>
  <string name="title_services">Services</string>
  <string name="title_follow_us">Follow us</string>
  <string name="title_facebook">Facebook</string>
  <string name="title_twitter">Twitter</string>
  <string name="title_entertainers">Entertainers</string>
  <string name="pref_services">pref_services</string>
  <string name="pref_entertainers">pref_entertainers</string>
  <string name="pref_organizers">pref_organizers</string>
  <string name="pref_facebook">pref_facebook</string>
  <string name="pref_twitter">pref_twitter</string>
  <string name="title_activity_services">Services</string>
  <string name="title_activity_entertainers">Entertainers</string>
  <string name="title_activity_organizers">Organizers</string>
  <string name="title_company">Elmax Developers.</string>
  <string name="company_email">elmaxdevelopers@gmail.com</string>
  <string name="title_help_and_feedback">Help and Feedback</string>
  <string name="pref_email">pref_email</string>
  <string name="action_more">More</string>
  <string name="action_filter">Filter</string>
  <string name="title_activity_services_read_more">ServicesReadMoreActivity</string>
  <string name="pref_county">pref_location</string>
  <string name="title_location">Show Events Within</string>
  <string name="default_county">Everywhere</string>
  <string name="title_activity_service_images">ServiceImagesActivity</string>
  <string name="title_activity_search">Search</string>
  <string name="title_activity_search_results">SearchResults</string>
  <string name="title_activity_first_install">Welcome</string>
  <string name="pref_is_first_install">is_first_install</string>
  <string name="pref_location_is_set">location_is_set</string>
  <string name="pref_whatsapp">pref_whatsapp</string>
  <string name="title_whatsapp">WhatsApp</string>
  <string name="username_advice">Your username is shown only when you comment on events.</string>
  <string name="pref_notification_hour">notification_hour</string>
  <string name="pref_notification_minute">notification_minute</string>
  <string name="pref_notification_time">notification_time</string>
  <string name="company_website">http://www.elmaxdevelopers.co.ke</string>
  <string name="app_download_info">Shared with Events Kenya app, \nDownload from Google Play Store or From our website</string>
  <string name="unknown_error">Unknown error occurred, Please try again later.</string>
  <string name="company_facebook">http://www.facebook.com/elmaxdevelopers</string>
  <string name="company_twitter">https://twitter.com/EventsKenya_app</string>
  <string name="send_comment_success">Comment sent successfully!</string>
  <string name="default_category">Music, Nightlife &amp; Entertainment</string>
  <string name="pref_category">pref_category</string>
  <string name="title_category">Interested In</string>
  <string name="search_hint">Search query</string>
  <string name="info_creating_username">Creating username, Please wait</string>
  <string name="action_create_event">Create event</string>
  <string name="hint_username">Enter username</string>
  <string name="username_created_successfully">Username created successfully!</string>
  <string name="spacing_error">Spaces not allowed in username</string>
  <string name="loading">Loading...</string>
  <string name="connection_error_message">Connection error! Please check your Network Status.</string>
  <string name="retry">Retry</string>
  <string name="no_commented_events">Tap going or interested on any event to see new comments here.Also enable comments checking in settings.\n(Checks for new comments when you start the app.)</string>
  <string name="data_policy">Data policy</string>
  <string name="empty_comment">Comment cannot be empty!</string>
  <string name="hint_type_comment">Type your comment</string>
  <string name="back_press_exit">Press again to exit!</string>
  <string name="failed_to_refresh">Failed to refresh...Pull down again to refresh!</string>
  <string name="error_sending_comment">Error sending comment</string>
  <string name="no_new_comments">No new comments found, refresh again in a few minutes time.</string>
  <string name="title_activity_login">Welcome</string>
  <string name="button_continue">Get Started</string>
  <string name="requesting_username">Requesting username, Please wait...</string>
  <string name="pref_is_first_Instance">pref_is_first_instance</string>
  <string name="pref_last_sweep">pref_last_sweep</string>
  <string name="action_help_and_feedback">Help and feedback</string>
  <string name="pref_category_selection_position">category_selection_position</string>
  <string name="title_activity_new_event">Create new event</string>
  <string name="venue_hint">Event venue</string>
  <string name="advance_hint">Advance</string>
  <string name="regular_hint">Regular</string>
  <string name="vip_hint">Vip</string>
  <string name="name_hint">Event name</string>
  <string name="description_hint">Event description</string>
  <string name="organizer_hint">Event organizer</string>
  <string name="promoter_hint">Event promoter</string>
  <string name="hint_parking_info">Parking information</string>
  <string name="hint_security_info">Security information</string>
  <string name="empty_fields">Some required fields are not filled</string>
  <string name="must_fill_error">This field must be filled</string>
  <string name="zero_interested">23</string>
  <string name="zero_going">41</string>
  <string name="title_activity_preview">Preview</string>
  <string name="action_submit">Submit</string>
  <string name="hint_tickets_link">Tickets link</string>
  <string name="continue_button">Continue</string>
  <string name="pref_check_new_comments_for_saved_events">comments_checking</string>
  <string name="title_days_visible_loading">Load events for all tabs</string>
  <string name="pref_load_events_in_all_tabs">load_events_for_all_tabs</string>
  <string name="title_check_new_comments">Check new comments</string>
  <string name="title_activity_obsolete">New version is available</string>
  <string name="obsolete_app_version">Obsolete App Version</string>
  <string name="label_installed">Installed</string>
  <string name="label_new_update">New update</string>
  <string name="button_download_latest_version">Download</string>
  <string name="pref_obsolete_last_check">obsolete_last_check</string>
  <string name="pref_has_downloaded_new_version">has_downloaded_new_version</string>
  <string name="pref_campus_mode">campus_mode</string>
  <string name="failed_tap_to_retry">Failed, Tap to retry!</string>
  <string name="loading_poster">Loading poster...</string>
  <string name="action_add_your_card">Create a service card</string>
  <string name="save">Save</string>
  <string name="title_activity_new_card">Create a service card</string>
  <string name="hint_service_name">Name</string>
  <string name="hint_about">About</string>
  <string name="hint_phone_number">Phone number</string>
  <string name="hint_email">Email</string>
  <string name="action_event_organizers">Event organizers</string>
  <string name="action_event_entertainers">Event entertainers</string>
  <string name="action_event_services">Event services</string>
  <string name="title_activity_new_card_preview">Card preview</string>
  <string name="searching">Searching...</string>
  <string name="location_advice">You will see events happening everywhere in the country, Its advisable to choose your county and see events happenning in your county.</string>
  <string name="title_choose_county">Select county</string>
  <string name="title_choose_category">Select category</string>
  <string name="action_edit">Edit</string>
  <string name="title_website">Website</string>
  <string name="sub_theme">#ff8800</string>
  <string name="pref_autodownload_posters">auto_download_posters</string>
  <string name="thumbnail">thumbnails/</string>
    <string name="title_activity_starter_settings">Quick settings</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>
  <string name="pref_has_finished_starter_settings">has_finished_starter_settings</string>
  <string name="theme_color">#673AB7</string>

</resources>
