<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/title_account">
        <Preference
            android:key="@string/pref_user"
            android:title="@string/title_username"
            android:summary="@string/default_user"
            android:defaultValue="@string/default_user"/>

        <Preference
            android:key="@string/pref_category"
            android:title="@string/title_category" />

        <Preference
            android:key="@string/pref_county"
            android:title="@string/title_location" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/data_policy">
        <CheckBoxPreference
            android:title="@string/title_days_visible_loading"
            android:key="@string/pref_load_events_in_all_tabs"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:title="Auto download posters"
            android:key="@string/pref_autodownload_posters"
            android:summary="Control your data usage"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:title="@string/title_check_new_comments"
            android:key="@string/pref_check_new_comments_for_saved_events"
            android:summary="New comments are checked when you start the app."
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_website">
        <Preference
            android:title="@string/title_company"
            android:summary="@string/company_website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/company_website"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_about">
        <Preference
            android:title="@string/title_app_version"
            android:summary="@string/app_version"/>
        <Preference
            android:key="@string/pref_email"
            android:title="@string/title_company"
            android:summary="@string/company_email"/>
    </PreferenceCategory>
</PreferenceScreen>