<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connection_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/connection_error_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/connection_error"/>

        <TextView
            android:id="@+id/connection_error_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center"
            android:text="@string/connection_error_message"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="64dp"
            android:id="@+id/retry_button"
            android:text="@string/retry"/>
    </LinearLayout>
</ScrollView>