<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="3dp"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/set_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:maxLength="50"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/venue_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/set_event_venue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/venue_hint"
                    android:maxLength="50"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/Tickets"
                        android:id="@+id/advance_price"
                        android:hint="@string/advance_hint"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/Tickets"
                        android:id="@+id/regular_price"
                        android:hint="@string/regular_hint"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/Tickets"
                        android:id="@+id/vip_price"
                        android:hint="@string/vip_hint"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Free"/>
                    <CheckBox
                        android:id="@+id/free_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:checked="false" />

                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="7"
                    android:maxLength="320"
                    android:imeOptions="actionDone"
                    android:hint="@string/description_hint"/>
            </android.support.design.widget.TextInputLayout>

            <include
                layout="@layout/category_county_form"/>

            <include
                layout="@layout/dates_form"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Use a well designed poster image"/>

            <!-- Event Image -->
            <ke.co.elmaxdevelopers.eventskenya.views.SquaredFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <ImageView
                    android:id="@+id/event_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
            </ke.co.elmaxdevelopers.eventskenya.views.SquaredFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Additional information" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        android:id="@+id/event_promoter"
                        android:hint="@string/promoter_hint"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        android:id="@+id/event_organizer"
                        android:hint="@string/organizer_hint"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/parking_info_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/parking_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="3"
                    android:maxLength="100"
                    android:imeOptions="actionNext"
                    android:hint="@string/hint_parking_info"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/security_info_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/security_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="3"
                    android:maxLength="100"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_security_info"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tickets_link_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/tickets_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textNoSuggestions|textUri"
                    android:maxLines="3"
                    android:maxLength="100"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_tickets_link"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:onClick="submitNewEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_button"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>